--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17153282">Online destination for Product Enthusiasts</a>
+                                    <a href="https://news.ycombinator.com/item?id=17163561">Firefox addon which shows tabs grouped by containers in the sidebar</a>
                                 </span>
                             </td>
                         </tr>
@@ -174,7 +174,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 17:37:51 &nbsp;•&nbsp;
                                     177 comments &nbsp;•&nbsp;
-                                    1158.0 points
+                                    1159.0 points
                                 </span>
                             </td>
                         </tr>
@@ -253,8 +253,8 @@
                                     <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 22:01:52 &nbsp;•&nbsp;
-                                    205 comments &nbsp;•&nbsp;
-                                    412.0 points
+                                    207 comments &nbsp;•&nbsp;
+                                    414.0 points
                                 </span>
                             </td>
                         </tr>
@@ -334,7 +334,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 23:29:46 &nbsp;•&nbsp;
                                     89 comments &nbsp;•&nbsp;
-                                    358.0 points
+                                    361.0 points
                                 </span>
                             </td>
                         </tr>
@@ -413,8 +413,8 @@
                                     <a class="node" href="http://thesoundingline.com/map-of-the-day-every-ruler-in-europe-since-400-bc/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 11:58:58 &nbsp;•&nbsp;
-                                    126 comments &nbsp;•&nbsp;
-                                    302.0 points
+                                    127 comments &nbsp;•&nbsp;
+                                    305.0 points
                                 </span>
                             </td>
                         </tr>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 13:00:03.792533</strong>
+            <strong>Last update at 2018-05-28 13:10:03.467509</strong>
         </div>
     </div>
 </div>
