--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17153282">Online destination for Product Enthusiasts</a>
+                                    <a href="https://news.ycombinator.com/item?id=17163561">Firefox addon which shows tabs grouped by containers in the sidebar</a>
                                 </span>
                             </td>
                         </tr>
@@ -206,14 +206,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17142183">U.S. Launches Criminal Probe into Bitcoin Price Manipulation</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166541">Every Ruler in Europe Every Year Since 400 BC</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-24/bitcoin-manipulation-is-said-to-be-focus-of-u-s-criminal-probe">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=sdfx">sdfx</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 08:37:24 &nbsp;•&nbsp;
-                                    215 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://thesoundingline.com/map-of-the-day-every-ruler-in-europe-since-400-bc/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 11:58:58 &nbsp;•&nbsp;
+                                    127 comments &nbsp;•&nbsp;
                                     305.0 points
                                 </span>
                             </td>
@@ -226,15 +226,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166541">Every Ruler in Europe Every Year Since 400 BC</a>
+                                    <a href="https://news.ycombinator.com/item?id=17142183">U.S. Launches Criminal Probe into Bitcoin Price Manipulation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://thesoundingline.com/map-of-the-day-every-ruler-in-europe-since-400-bc/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 11:58:58 &nbsp;•&nbsp;
-                                    126 comments &nbsp;•&nbsp;
-                                    302.0 points
+                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-24/bitcoin-manipulation-is-said-to-be-focus-of-u-s-criminal-probe">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=sdfx">sdfx</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 08:37:24 &nbsp;•&nbsp;
+                                    215 comments &nbsp;•&nbsp;
+                                    305.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 13:00:03.792533</strong>
+            <strong>Last update at 2018-05-28 13:10:03.467509</strong>
         </div>
     </div>
 </div>
