--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17153282">Online destination for Product Enthusiasts</a>
+                                    <a href="https://news.ycombinator.com/item?id=17163561">Firefox addon which shows tabs grouped by containers in the sidebar</a>
                                 </span>
                             </td>
                         </tr>
@@ -194,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 17:37:51 &nbsp;•&nbsp;
                                     177 comments &nbsp;•&nbsp;
-                                    1158.0 points
+                                    1159.0 points
                                 </span>
                             </td>
                         </tr>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 13:00:03.792533</strong>
+            <strong>Last update at 2018-05-28 13:10:03.467509</strong>
         </div>
     </div>
 </div>
