--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17153282">Online destination for Product Enthusiasts</a>
+                                    <a href="https://news.ycombinator.com/item?id=17163561">Firefox addon which shows tabs grouped by containers in the sidebar</a>
                                 </span>
                             </td>
                         </tr>
@@ -466,6 +466,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17165800">Oracle plans to dump risky Java serialization</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.infoworld.com/article/3275924/java/oracle-plans-to-dump-risky-java-serialization.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=s-macke">s-macke</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 06:44:02 &nbsp;•&nbsp;
+                                    128 comments &nbsp;•&nbsp;
+                                    223.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17149995">Free Music Archive</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -515,26 +535,6 @@
                                     2018-05-24 16:45:22 &nbsp;•&nbsp;
                                     50 comments &nbsp;•&nbsp;
                                     222.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165800">Oracle plans to dump risky Java serialization</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.infoworld.com/article/3275924/java/oracle-plans-to-dump-risky-java-serialization.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=s-macke">s-macke</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 06:44:02 &nbsp;•&nbsp;
-                                    128 comments &nbsp;•&nbsp;
-                                    220.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 13:00:03.792533</strong>
+            <strong>Last update at 2018-05-28 13:10:03.467509</strong>
         </div>
     </div>
 </div>
