--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172057">Remember the Vasa [pdf]</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172059">What will happen when an ant falls from the Empire State Building</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://open-std.org/JTC1/SC22/WG21/docs/papers/2018/p0977r0.pdf">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=nikbackm">nikbackm</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 12:27:48 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.theverge.com/tldr/2016/6/15/11936802/ant-dropped-from-empire-state-building-science-experiment-mystery-solved">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=palerdot">palerdot</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 12:28:01 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
                                     3.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 13:20:04.778051</strong>
+            <strong>Last update at 2018-05-28 13:30:03.102776</strong>
         </div>
     </div>
 </div>
