--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -426,26 +426,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166824">MIT Physicists Develop 5 Times More Efficient Thermoelectric Material</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://news.mit.edu/2018/materials-heated-magnetic-fields-thermoelectrics-0525">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 13:34:20 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    6.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169335">Venezuelan immigrants turn to ride-hailing services across Latin America</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -515,6 +495,26 @@
                                     2018-05-27 16:32:42 &nbsp;•&nbsp;
                                     2 comments &nbsp;•&nbsp;
                                     5.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172059">What will happen when an ant falls from the Empire State Building</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.theverge.com/tldr/2016/6/15/11936802/ant-dropped-from-empire-state-building-science-experiment-mystery-solved">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=palerdot">palerdot</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 12:28:01 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    4.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 13:30:03.102776</strong>
+            <strong>Last update at 2018-05-28 13:40:04.010580</strong>
         </div>
     </div>
 </div>
