--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -194,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 17:37:51 &nbsp;•&nbsp;
                                     179 comments &nbsp;•&nbsp;
-                                    1179.0 points
+                                    1180.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17144160">Uber Self-Driving Car That Struck Pedestrian Wasn’t Set to Stop in an Emergency</a>
+                                    <a href="https://news.ycombinator.com/item?id=17169331">Python’s For - Else</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.ntsb.gov/investigations/AccidentReports/Reports/HWY18MH010-prelim.pdf">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jeffreyrogers">jeffreyrogers</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 14:18:04 &nbsp;•&nbsp;
-                                    462 comments &nbsp;•&nbsp;
-                                    427.0 points
+                                    <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 22:01:52 &nbsp;•&nbsp;
+                                    213 comments &nbsp;•&nbsp;
+                                    429.0 points
                                 </span>
                             </td>
                         </tr>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 14:10:04.096311</strong>
+            <strong>Last update at 2018-05-28 14:20:03.426866</strong>
         </div>
     </div>
 </div>
