--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169331">Python’s For - Else</a>
+                                    <a href="https://news.ycombinator.com/item?id=17144160">Uber Self-Driving Car That Struck Pedestrian Wasn’t Set to Stop in an Emergency</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 22:01:52 &nbsp;•&nbsp;
-                                    211 comments &nbsp;•&nbsp;
-                                    426.0 points
+                                    <a class="node" href="https://www.ntsb.gov/investigations/AccidentReports/Reports/HWY18MH010-prelim.pdf">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jeffreyrogers">jeffreyrogers</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 14:18:04 &nbsp;•&nbsp;
+                                    462 comments &nbsp;•&nbsp;
+                                    427.0 points
                                 </span>
                             </td>
                         </tr>
@@ -413,7 +413,7 @@
                                     <a class="node" href="http://www.nicolasbize.com/blog/30-years-later-qbasic-is-still-the-best/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=AlexeyBrin">AlexeyBrin</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 13:41:54 &nbsp;•&nbsp;
-                                    180 comments &nbsp;•&nbsp;
+                                    181 comments &nbsp;•&nbsp;
                                     350.0 points
                                 </span>
                             </td>
@@ -554,7 +554,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 11:58:58 &nbsp;•&nbsp;
                                     127 comments &nbsp;•&nbsp;
-                                    314.0 points
+                                    316.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 14:10:04.096311</strong>
+            <strong>Last update at 2018-05-28 14:20:03.426866</strong>
         </div>
     </div>
 </div>
