--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17170764">In 2018, Windows died at home and nobody cared</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.zdnet.com/article/in-2018-windows-died-at-home-and-nobody-cared/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Tuldok">Tuldok</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 05:43:36 &nbsp;•&nbsp;
+                                    12 comments &nbsp;•&nbsp;
+                                    15.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169010">Pewdiepie Is Teaching His Audience That Women Are Asking for It</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -195,26 +215,6 @@
                                     2018-05-27 18:26:49 &nbsp;•&nbsp;
                                     1 comments &nbsp;•&nbsp;
                                     11.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172613">Shadow DOM enabled in Firefox nightly</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://bugzilla.mozilla.org/1460069">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=velmu">velmu</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 14:32:46 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    9.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 15:10:04.725155</strong>
+            <strong>Last update at 2018-05-28 15:20:03.684462</strong>
         </div>
     </div>
 </div>
