--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -173,8 +173,8 @@
                                     <a class="node" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5853825/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 14:47:36 &nbsp;•&nbsp;
-                                    49 comments &nbsp;•&nbsp;
-                                    217.0 points
+                                    50 comments &nbsp;•&nbsp;
+                                    218.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165532">Penniless Yogi Baba Ramdev Controls a Billion-Dollar Corporation</a>
+                                    <a href="https://news.ycombinator.com/item?id=17170733">An embedded database written in Rust</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.bloomberg.com/news/features/2018-03-15/this-multibillion-dollar-corporation-is-controlled-by-a-penniless-yoga-superstar">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 05:18:04 &nbsp;•&nbsp;
-                                    124 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://github.com/spacejam/sled">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mountainview">mountainview</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 05:32:28 &nbsp;•&nbsp;
+                                    63 comments &nbsp;•&nbsp;
                                     188.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 15:20:03.684462</strong>
+            <strong>Last update at 2018-05-28 15:30:03.945632</strong>
         </div>
     </div>
 </div>
