--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170764">In 2018, Windows died at home and nobody cared</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.zdnet.com/article/in-2018-windows-died-at-home-and-nobody-cared/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Tuldok">Tuldok</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 05:43:36 &nbsp;•&nbsp;
-                                    12 comments &nbsp;•&nbsp;
-                                    15.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169010">Pewdiepie Is Teaching His Audience That Women Are Asking for It</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -315,6 +295,26 @@
                                     2018-05-27 18:40:40 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     9.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17171528">Using a mobile phone to clone a Mifare card (2016)</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://timdows.com/projects/using-a-mobile-phone-to-clone-a-mifare-card/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=wolframio">wolframio</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 09:41:10 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    8.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 15:30:03.945632</strong>
+            <strong>Last update at 2018-05-28 15:40:04.333837</strong>
         </div>
     </div>
 </div>
