--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166693">Chip Hall of Fame: Zilog Z80 Microprocessor (2017)</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://spectrum.ieee.org/tech-history/silicon-revolution/chip-hall-of-fame-zilog-z80-microprocessor">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 12:49:01 &nbsp;•&nbsp;
-                                    65 comments &nbsp;•&nbsp;
-                                    109.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17165979">What really happened to that melted NASA camera?</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -334,7 +314,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=togelius">togelius</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 23:50:10 &nbsp;•&nbsp;
                                     40 comments &nbsp;•&nbsp;
-                                    94.0 points
+                                    96.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,6 +506,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172524">Emacs 26.1 released</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://lists.gnu.org/archive/html/emacs-devel/2018-05/msg00765.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 14:19:04 &nbsp;•&nbsp;
+                                    17 comments &nbsp;•&nbsp;
+                                    77.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17166642">The ‘suprasecular’ stagnation</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 15:50:03.792280</strong>
+            <strong>Last update at 2018-05-28 16:00:03.802483</strong>
         </div>
     </div>
 </div>
