--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -326,26 +326,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17155087">Soundex</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://en.wikipedia.org/wiki/Soundex">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Ivoah">Ivoah</a></strong> &nbsp;•&nbsp;
-                                    2018-05-25 16:09:51 &nbsp;•&nbsp;
-                                    25 comments &nbsp;•&nbsp;
-                                    94.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17160929">Document Liberation Project</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -513,8 +493,28 @@
                                     <a class="node" href="https://lists.gnu.org/archive/html/emacs-devel/2018-05/msg00765.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 14:19:04 &nbsp;•&nbsp;
-                                    17 comments &nbsp;•&nbsp;
-                                    77.0 points
+                                    19 comments &nbsp;•&nbsp;
+                                    80.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172287">Perceived Physical Activity and Mortality: Study</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.health.harvard.edu/blog/mind-over-matter-how-fit-you-think-you-are-versus-actual-fitness-2017081412282">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 13:33:30 &nbsp;•&nbsp;
+                                    57 comments &nbsp;•&nbsp;
+                                    80.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 16:00:03.802483</strong>
+            <strong>Last update at 2018-05-28 16:10:03.034068</strong>
         </div>
     </div>
 </div>
