--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
+                                    <a href="https://news.ycombinator.com/item?id=17173051">Cost of a 51% Attack on Popular Cryptocurrencies</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17163561">Firefox addon which shows tabs grouped by containers in the sidebar</a>
+                                    <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -473,7 +473,7 @@
                                     <a class="node" href="https://github.com/ambv/black">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=kumaranvpl">kumaranvpl</a></strong> &nbsp;•&nbsp;
                                     2018-05-25 09:07:37 &nbsp;•&nbsp;
-                                    253 comments &nbsp;•&nbsp;
+                                    254 comments &nbsp;•&nbsp;
                                     440.0 points
                                 </span>
                             </td>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 16:10:03.034068</strong>
+            <strong>Last update at 2018-05-28 16:20:03.252591</strong>
         </div>
     </div>
 </div>
