--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
+                                    <a href="https://news.ycombinator.com/item?id=17173051">Cost of a 51% Attack on Popular Cryptocurrencies</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17163561">Firefox addon which shows tabs grouped by containers in the sidebar</a>
+                                    <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -313,7 +313,7 @@
                                     <a class="node" href="https://gist.github.com/nadavrot/5b35d44e8ba3dd718e595e40184d03f0">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 23:29:46 &nbsp;•&nbsp;
-                                    90 comments &nbsp;•&nbsp;
+                                    91 comments &nbsp;•&nbsp;
                                     373.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 16:10:03.034068</strong>
+            <strong>Last update at 2018-05-28 16:20:03.252591</strong>
         </div>
     </div>
 </div>
