--- a/jobs/page1.html
+++ b/jobs/page1.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
                                 </span>
                             </td>
                         </tr>
@@ -439,7 +439,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 17:10:04.136753</strong>
+            <strong>Last update at 2018-05-28 17:20:04.095738</strong>
         </div>
     </div>
 </div>
