--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
                                 </span>
                             </td>
                         </tr>
@@ -234,7 +234,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=kqr2">kqr2</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 06:18:38 &nbsp;•&nbsp;
                                     70 comments &nbsp;•&nbsp;
-                                    394.0 points
+                                    395.0 points
                                 </span>
                             </td>
                         </tr>
@@ -354,7 +354,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 16:57:37 &nbsp;•&nbsp;
                                     137 comments &nbsp;•&nbsp;
-                                    361.0 points
+                                    362.0 points
                                 </span>
                             </td>
                         </tr>
@@ -434,7 +434,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=craigkerstiens">craigkerstiens</a></strong> &nbsp;•&nbsp;
                                     2018-05-25 15:02:37 &nbsp;•&nbsp;
                                     137 comments &nbsp;•&nbsp;
-                                    340.0 points
+                                    341.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 17:10:04.136753</strong>
+            <strong>Last update at 2018-05-28 17:20:04.095738</strong>
         </div>
     </div>
 </div>
