--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170733">An embedded database written in Rust</a>
+                                    <a href="https://news.ycombinator.com/item?id=17143452">Zuckerberg set up fraudulent scheme to 'weaponise' data, court case alleges</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/spacejam/sled">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=mountainview">mountainview</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 05:32:28 &nbsp;•&nbsp;
-                                    68 comments &nbsp;•&nbsp;
-                                    218.0 points
+                                    <a class="node" href="https://www.theguardian.com/technology/2018/may/24/mark-zuckerberg-set-up-fraudulent-scheme-weaponise-data-facebook-court-case-alleges?CMP=share_btn_tw">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Malarkey73">Malarkey73</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 12:54:13 &nbsp;•&nbsp;
+                                    26 comments &nbsp;•&nbsp;
+                                    220.0 points
                                 </span>
                             </td>
                         </tr>
@@ -306,14 +306,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17143200">GDPR Hall of Shame</a>
+                                    <a href="https://news.ycombinator.com/item?id=17165866">Zero-Overhead Tree Processing with the Visitor Pattern</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://gdprhallofshame.com/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=K0nserv">K0nserv</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 12:15:40 &nbsp;•&nbsp;
-                                    182 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://www.lihaoyi.com/post/ZeroOverheadTreeProcessingwiththeVisitorPattern.html?a=1">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lihaoyi">lihaoyi</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 07:07:37 &nbsp;•&nbsp;
+                                    78 comments &nbsp;•&nbsp;
                                     205.0 points
                                 </span>
                             </td>
@@ -326,15 +326,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165866">Zero-Overhead Tree Processing with the Visitor Pattern</a>
+                                    <a href="https://news.ycombinator.com/item?id=17143200">GDPR Hall of Shame</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.lihaoyi.com/post/ZeroOverheadTreeProcessingwiththeVisitorPattern.html?a=1">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lihaoyi">lihaoyi</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 07:07:37 &nbsp;•&nbsp;
-                                    78 comments &nbsp;•&nbsp;
-                                    204.0 points
+                                    <a class="node" href="http://gdprhallofshame.com/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=K0nserv">K0nserv</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 12:15:40 &nbsp;•&nbsp;
+                                    182 comments &nbsp;•&nbsp;
+                                    205.0 points
                                 </span>
                             </td>
                         </tr>
@@ -453,7 +453,7 @@
                                     <a class="node" href="http://nicktasios.nl/posts/space-invaders-from-scratch-part-1.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Grieverheart">Grieverheart</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 08:28:07 &nbsp;•&nbsp;
-                                    34 comments &nbsp;•&nbsp;
+                                    36 comments &nbsp;•&nbsp;
                                     196.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 17:50:04.819386</strong>
+            <strong>Last update at 2018-05-28 18:00:03.282906</strong>
         </div>
     </div>
 </div>
