--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17171302">Farmee alpha released – a vertical farm control system for raspberry pi</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://medium.com/farmee/farmee-closed-alpha-v0-2-released-c207ed981f0c">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=steffenabel">steffenabel</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 08:37:50 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    6.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17170126">Chess.com Acquires Komodo; Launches New 'Monte Carlo' Version</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -213,7 +233,7 @@
                                     <a class="node" href="https://devpost.com/software/organ-trail">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=ca98am79">ca98am79</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 17:19:07 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
                                     5.0 points
                                 </span>
                             </td>
@@ -326,13 +346,13 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17173593">Anatomy of an online misinformation network</a>
+                                    <a href="https://news.ycombinator.com/item?id=17173597">Jsreport: JavaScript reporting server</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 17:24:27 &nbsp;•&nbsp;
+                                    <a class="node" href="https://jsreport.net/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=wilsonfiifi">wilsonfiifi</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 17:25:03 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     4.0 points
                                 </span>
@@ -486,26 +506,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171033">NetBSD Network Security Audit</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://blog.netbsd.org/tnf/entry/network_security_audit">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 07:21:31 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    4.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17171006">Have I Been Sold? – check if someone sold your email</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 17:50:04.819386</strong>
+            <strong>Last update at 2018-05-28 18:00:03.282906</strong>
         </div>
     </div>
 </div>
