--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,14 +166,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170827">Living Underwater with Jacques Cousteau</a>
+                                    <a href="https://news.ycombinator.com/item?id=17171538">Firefox will protect you from websites that mine cryptocurrency on your computer</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.laphamsquarterly.org/roundtable/living-underwater-jacques-cousteau">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Thevet">Thevet</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 06:13:35 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.techrepublic.com/google-amp/article/firefox-will-soon-protect-you-from-websites-that-mine-cryptocurrency-on-your-computer/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mnmlsm">mnmlsm</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 09:44:05 &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
                                     11.0 points
                                 </span>
                             </td>
@@ -193,7 +193,7 @@
                                     <a class="node" href="https://gist.github.com/zero-master/57ce7f5091503ca637747df5ba4fe71d">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=xstartup">xstartup</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 18:16:43 &nbsp;•&nbsp;
-                                    20 comments &nbsp;•&nbsp;
+                                    21 comments &nbsp;•&nbsp;
                                     10.0 points
                                 </span>
                             </td>
@@ -233,7 +233,7 @@
                                     <a class="node" href="http://amp.sacbee.com/news/local/transportation/back-seat-driver/article211828814.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=arunc">arunc</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 17:14:02 &nbsp;•&nbsp;
-                                    10 comments &nbsp;•&nbsp;
+                                    11 comments &nbsp;•&nbsp;
                                     9.0 points
                                 </span>
                             </td>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17173873">Deprecate CSS</a>
+                                    <a href="https://news.ycombinator.com/item?id=17173937">Messaging Layer Security Architecture</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://dxwc.gitlab.io/rant/abolish_css.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dotdotdash">dotdotdash</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 18:14:11 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://tools.ietf.org/html/draft-omara-mls-architecture-01">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=morsch">morsch</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 18:24:58 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
                                     5.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 20:20:03.636461</strong>
+            <strong>Last update at 2018-05-28 20:30:04.606074</strong>
         </div>
     </div>
 </div>
