--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -174,7 +174,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 13:37:26 &nbsp;•&nbsp;
                                     15 comments &nbsp;•&nbsp;
-                                    86.0 points
+                                    87.0 points
                                 </span>
                             </td>
                         </tr>
@@ -213,8 +213,8 @@
                                     <a class="node" href="http://wordsandbuttons.online/apl_deserves_its_renaissance_too.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=okaleniuk">okaleniuk</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 16:30:47 &nbsp;•&nbsp;
-                                    34 comments &nbsp;•&nbsp;
-                                    78.0 points
+                                    36 comments &nbsp;•&nbsp;
+                                    80.0 points
                                 </span>
                             </td>
                         </tr>
@@ -234,7 +234,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 07:21:31 &nbsp;•&nbsp;
                                     10 comments &nbsp;•&nbsp;
-                                    73.0 points
+                                    76.0 points
                                 </span>
                             </td>
                         </tr>
@@ -254,7 +254,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 22:48:37 &nbsp;•&nbsp;
                                     9 comments &nbsp;•&nbsp;
-                                    70.0 points
+                                    71.0 points
                                 </span>
                             </td>
                         </tr>
@@ -294,7 +294,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=benwr">benwr</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 07:39:27 &nbsp;•&nbsp;
                                     4 comments &nbsp;•&nbsp;
-                                    61.0 points
+                                    62.0 points
                                 </span>
                             </td>
                         </tr>
@@ -413,8 +413,8 @@
                                     <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 17:24:27 &nbsp;•&nbsp;
-                                    4 comments &nbsp;•&nbsp;
-                                    39.0 points
+                                    6 comments &nbsp;•&nbsp;
+                                    41.0 points
                                 </span>
                             </td>
                         </tr>
@@ -434,7 +434,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dustfinger">dustfinger</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 10:24:30 &nbsp;•&nbsp;
                                     17 comments &nbsp;•&nbsp;
-                                    37.0 points
+                                    39.0 points
                                 </span>
                             </td>
                         </tr>
@@ -453,7 +453,7 @@
                                     <a class="node" href="https://www.theringer.com/tech/2018/5/18/17362452/microsoft-antitrust-lawsuit-netscape-internet-explorer-20-years">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 01:42:51 &nbsp;•&nbsp;
-                                    15 comments &nbsp;•&nbsp;
+                                    16 comments &nbsp;•&nbsp;
                                     36.0 points
                                 </span>
                             </td>
@@ -514,7 +514,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=happy-go-lucky">happy-go-lucky</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 18:03:04 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
-                                    27.0 points
+                                    29.0 points
                                 </span>
                             </td>
                         </tr>
@@ -533,7 +533,7 @@
                                     <a class="node" href="https://www.youtube.com/watch?v=H7p5YEOrlSc">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=staticelf">staticelf</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 11:29:19 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
                                     25.0 points
                                 </span>
                             </td>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169152">I found some COBOL. Last comment is from 1985. Written by my mother</a>
+                                    <a href="https://news.ycombinator.com/item?id=17171438">Filming 100-Megapixel Aerials Over New York</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.twitter.com/grauhut/status/1000017084435312642">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=mcenedella">mcenedella</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 21:18:11 &nbsp;•&nbsp;
-                                    4 comments &nbsp;•&nbsp;
-                                    24.0 points
+                                    <a class="node" href="http://www.phfx.com/articles/Filming100MegapixelLargeFormatAerialsOverNewYork/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=bartkappenburg">bartkappenburg</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 09:13:04 &nbsp;•&nbsp;
+                                    10 comments &nbsp;•&nbsp;
+                                    25.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 20:50:03.657005</strong>
+            <strong>Last update at 2018-05-28 21:00:03.834747</strong>
         </div>
     </div>
 </div>
