--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166258">Psychopathy to Altruism: Neurobiology of the Selfish–Selfless Spectrum</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://vuetube.surge.sh">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 13:37:26 &nbsp;•&nbsp;
-                                    15 comments &nbsp;•&nbsp;
-                                    86.0 points
+                                    <a class="node" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5917043/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 09:57:09 &nbsp;•&nbsp;
+                                    25 comments &nbsp;•&nbsp;
+                                    87.0 points
                                 </span>
                             </td>
                         </tr>
@@ -273,8 +273,8 @@
                                     <a class="node" href="http://wordsandbuttons.online/apl_deserves_its_renaissance_too.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=okaleniuk">okaleniuk</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 16:30:47 &nbsp;•&nbsp;
-                                    34 comments &nbsp;•&nbsp;
-                                    78.0 points
+                                    36 comments &nbsp;•&nbsp;
+                                    80.0 points
                                 </span>
                             </td>
                         </tr>
@@ -315,6 +315,26 @@
                                     2018-05-27 12:29:35 &nbsp;•&nbsp;
                                     50 comments &nbsp;•&nbsp;
                                     77.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17171033">NetBSD Network Security Audit</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://blog.netbsd.org/tnf/entry/network_security_audit">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 07:21:31 &nbsp;•&nbsp;
+                                    10 comments &nbsp;•&nbsp;
+                                    76.0 points
                                 </span>
                             </td>
                         </tr>
@@ -386,14 +406,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171033">NetBSD Network Security Audit</a>
+                                    <a href="https://news.ycombinator.com/item?id=17161886">On the Detection of Kernel-Level Rootkits Using Hardware Performance Counters [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://blog.netbsd.org/tnf/entry/network_security_audit">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 07:21:31 &nbsp;•&nbsp;
-                                    10 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://www.cs.binghamton.edu/~devtyushkin/asiaccs-2017.pdf">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 13:26:51 &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
                                     73.0 points
                                 </span>
                             </td>
@@ -406,15 +426,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17161886">On the Detection of Kernel-Level Rootkits Using Hardware Performance Counters [pdf]</a>
+                                    <a href="https://news.ycombinator.com/item?id=17169532">How Brain Waves Surf Sound Waves to Process Speech</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.cs.binghamton.edu/~devtyushkin/asiaccs-2017.pdf">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 13:26:51 &nbsp;•&nbsp;
-                                    4 comments &nbsp;•&nbsp;
-                                    73.0 points
+                                    <a class="node" href="http://nautil.us/blog/how-brain-waves-surf-sound-waves-to-process-speech">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 22:48:37 &nbsp;•&nbsp;
+                                    9 comments &nbsp;•&nbsp;
+                                    71.0 points
                                 </span>
                             </td>
                         </tr>
@@ -455,26 +475,6 @@
                                     2018-05-26 05:13:00 &nbsp;•&nbsp;
                                     74 comments &nbsp;•&nbsp;
                                     71.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169532">How Brain Waves Surf Sound Waves to Process Speech</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://nautil.us/blog/how-brain-waves-surf-sound-waves-to-process-speech">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 22:48:37 &nbsp;•&nbsp;
-                                    9 comments &nbsp;•&nbsp;
-                                    70.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 20:50:03.657005</strong>
+            <strong>Last update at 2018-05-28 21:00:03.834747</strong>
         </div>
     </div>
 </div>
