--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
+                                    <a href="https://news.ycombinator.com/item?id=17162887">Mozilla to remove “meritocracy” from governance docs because it's “problematic”</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://vuetube.surge.sh">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 13:37:26 &nbsp;•&nbsp;
-                                    17 comments &nbsp;•&nbsp;
-                                    88.0 points
+                                    <a class="node" href="https://groups.google.com/d/msg/mozilla.governance/OQlS6-gUBLQ/u0Em5XKjCAAJ">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=cucumberferity">cucumberferity</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 16:34:20 &nbsp;•&nbsp;
+                                    140 comments &nbsp;•&nbsp;
+                                    89.0 points
                                 </span>
                             </td>
                         </tr>
@@ -314,7 +314,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=benwr">benwr</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 07:39:27 &nbsp;•&nbsp;
                                     6 comments &nbsp;•&nbsp;
-                                    79.0 points
+                                    81.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 23:00:03.593945</strong>
+            <strong>Last update at 2018-05-28 23:10:03.706350</strong>
         </div>
     </div>
 </div>
